crates/pg_syntax/tests/snapshots/postgres_regress/timestamptz@291.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('-Infinity'::float);"
---
SelectStmt@0..40
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..38
    FuncCall@7..38
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      TypeCast@20..38
        AConst@20..31
          Sconst@20..31 "'-Infinity'"
        Typecast@31..33 "::"
        TypeName@33..38
          FloatP@33..38 "float"
  Ascii41@38..39 ")"
  Ascii59@39..40 ";"

